2008-08-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/rtems/status-checks.h: Fixed integer conversion warning.

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Abort if stdbool.h is not c99 compliant.

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pppd/pppd.h: Use stdbool.h. Remove local bool.

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add AC_HEADER_STDBOOL.
	* libblock/src/nvdisk.c: Remove bool, true, false (unused, clashes
	with C99/POSIX).

2008-08-19	Cedric Aubert <cedric_aubert@yahoo.fr>

	PR 500/misc
	* libcsupport/src/termios.c: Avoid potential buffer overflow.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libnetworking/kern/kern_sysctl.c, libnetworking/libc/res_debug.c: Fix
	warnings.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libfs/src/nfsclient/src/nfs.c, libfs/src/nfsclient/src/rpcio.c:
	Remove some warnings. Using ASSERT/assert macros confuses gcc who is
	unsure actions take place. More importantly if you ever compiled with
	NDEBUG set wrong, intended actions would not occur. Likely I did not
	catch all of these.

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* httpd/uemf.h: Add empty braces to macro.

2008-08-19	Tim FitzGeorge <tim.fitzgeorge@astrium.eads.net>

	PR 1296/cpukit.
	* posix/src/timersettime.c: POSIX timers use incorrect repeat interval.
	This patch fixes the following problems in timer_settime: 1) Uses
	value.it_interval for repeat period. 2) Corrects test for incorrect
	value of it_value.tv_nsec (should reject 1000000000).

2008-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* score/inline/rtems/score/threadmp.inl: Add include of
	rtems/score/mpci.h and remove extern.

2008-08-19	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/clockdrv.h: Add Clock_Exit prototype.

2008-08-19	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/inline/rtems/rtems/asr.inl,